@@ -5,6 +5,7 @@ SVN
   decode-dimms: Handle CRC of FB-DIMM and DDR3 SDRAM memory modules
                 Add support for DDR3 SDRAM
                 Fix decoding of SDR SDRAM bytes 12-14
+  decode-xeon: Delete
   i2c-stub-from-dump: Use udev settle to speed up initialization
 
 3.0.2 (2008-11-29)
